Few Changes made

--- a/index.html
+++ b/index.html
@@ -19,8 +19,6 @@
 
     <div class="container">
         <div class="container1">
-
-
             <div class="row">
                 <div class="col-4">
                     <input type="text" id="input" disabled>
@@ -34,6 +32,8 @@
                     </div>
                 </div>
 
+                <!--Memory functions-->
+
                 <div class="row">
                     <div class="col">
                         <button type="button" class="btn" value="mc" id="mc" disabled>MC</button>
@@ -43,6 +43,7 @@
                         <button type="button" class="btn" value="ms">MS</button>
                     </div>
                 </div>
+                <!--Trigonometry and log functions-->
                 <div class="row">
                     <div class="col">
                         <div class="dropdown">
@@ -73,8 +74,6 @@
                 </div>
                 <div class="row">
                     <div class="col col-bg">
-
-
                         <div class="dropdown dropm2">
                             <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown"
                                 aria-expanded="false">
@@ -92,16 +91,15 @@
                                         value="3root">&emsp;&emsp;&emsp;<sup>3</sup><em>&#8730;</em><span>
                                             y</span></button></li>
                             </ul>
-
-
                         </div>
-
+                        <!--PI e Clear and back-->
                         <button type="button" class="btn" value="pi">&pi;</button>
                         <button type="button" class="btn" value="e">e</button>
                         <button type="button" class="btn" value="ce">C</button>
                         <button type="button" class="btn" value="clear"><i class="fa-solid fa-delete-left"></i></button>
                     </div>
                 </div>
+                <!--Other functions of calculator-->
                 <div class="row">
                     <div class="col col-bg">
                         <button type="button" class="btn" value="square">x<sup>2</sup></button>
@@ -157,7 +155,6 @@
                         <button type="button" class="btn blue" value="=">=</button>
                     </div>
                 </div>
-
             </div> 
         </div>
     </div>
