--- a/index.html
+++ b/index.html
@@ -2,26 +2,25 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="style.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous" />
     <script src="https://kit.fontawesome.com/0c8946a054.js" crossorigin="anonymous"></script>
     <title>Calculator</title>
 </head>
 
 <body>
-
     <div class="container">
         <div class="container1">
             <div class="row">
                 <div class="col-4">
-                    <input type="text" id="input" disabled>
+                    <input type="text" id="input" disabled />
                 </div>
             </div>
             <div class="actions">
@@ -36,8 +35,12 @@
 
                 <div class="row">
                     <div class="col">
-                        <button type="button" class="btn" value="mc" id="mc" disabled>MC</button>
-                        <button type="button" class="btn" value="mr" id="mr" disabled>MR</button>
+                        <button type="button" class="btn" value="mc" id="mc" disabled>
+                            MC
+                        </button>
+                        <button type="button" class="btn" value="mr" id="mr" disabled>
+                            MR
+                        </button>
                         <button type="button" class="btn" value="m+">M+</button>
                         <button type="button" class="btn" value="m-">M-</button>
                         <button type="button" class="btn" value="ms">MS</button>
@@ -47,15 +50,28 @@
                 <div class="row">
                     <div class="col">
                         <div class="dropdown">
-                            <button class="btn  dropdown-toggle" type="button" data-bs-toggle="dropdown"
+                            <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown"
                                 aria-expanded="false">
-                                <img src="https://img.icons8.com/glyph-neue/14/null/trigonometry.png" /> Trigonometry
+                                <img src="https://img.icons8.com/glyph-neue/14/null/trigonometry.png" />
+                                Trigonometry
                             </button>
 
                             <ul class="dropdown-menu">
-                                <li><button class="dropdown-item" value="sin">&emsp;&emsp;&emsp;sin</button></li>
-                                <li><button class="dropdown-item" value="cos">&emsp;&emsp;&emsp;cos</button></li>
-                                <li><button class="dropdown-item" value="tan">&emsp;&emsp;&emsp;tan</button></li>
+                                <li>
+                                    <button class="dropdown-item" value="sin">
+                                        &emsp;&emsp;&emsp;sin
+                                    </button>
+                                </li>
+                                <li>
+                                    <button class="dropdown-item" value="cos">
+                                        &emsp;&emsp;&emsp;cos
+                                    </button>
+                                </li>
+                                <li>
+                                    <button class="dropdown-item" value="tan">
+                                        &emsp;&emsp;&emsp;tan
+                                    </button>
+                                </li>
                             </ul>
                         </div>
 
@@ -65,9 +81,21 @@
                                 <img src="https://img.icons8.com/ios-filled/14/null/frequency-f.png" />&nbsp;Function
                             </button>
                             <ul class="dropdown-menu">
-                                <li><button class="dropdown-item" value="log2">&emsp;&emsp;&emsp;log2</button></li>
-                                <li><button class="dropdown-item" value="rnd">&emsp;&emsp;&emsp;RND</button></li>
-                                <li><button class="dropdown-item" value="log1p">&emsp;&emsp;&emsp;log1p</button></li>
+                                <li>
+                                    <button class="dropdown-item" value="log2">
+                                        &emsp;&emsp;&emsp;log2
+                                    </button>
+                                </li>
+                                <li>
+                                    <button class="dropdown-item" value="rnd">
+                                        &emsp;&emsp;&emsp;RND
+                                    </button>
+                                </li>
+                                <li>
+                                    <button class="dropdown-item" value="log1p">
+                                        &emsp;&emsp;&emsp;log1p
+                                    </button>
+                                </li>
                             </ul>
                         </div>
                     </div>
@@ -79,30 +107,45 @@
                                 aria-expanded="false">
                                 2<sup>nd</sup>
                             </button>
-                            <ul class="dropdown-menu">
-
-                                <li><button class="dropdown-item " style="background-color: white;"
-                                        value="2^n">&emsp;&emsp;&emsp;2<sup>n</sup></button></li>
-                                <li><button class="dropdown-item " style="background-color: white;"
-                                        value="3^n">&emsp;&emsp;&emsp;3<sup>n</sup></button></li>
-                                <li><button class="dropdown-item " style="background-color: white;"
-                                        value="n^3">&emsp;&emsp;&emsp;n<sup>3</sup></button></li>
-                                <li><button class="dropdown-item " style="background-color: white;"
-                                        value="3root">&emsp;&emsp;&emsp;<sup>3</sup><em>&#8730;</em><span>
-                                            y</span></button></li>
+                            <ul class="dropdown-menu dropm">
+                                <li>
+                                    <button class="dropdown-item dropm" value="2^n">
+                                        &emsp;&emsp;&emsp;2<sup>n</sup>
+                                    </button>
+                                </li>
+                                <li>
+                                    <button class="dropdown-item dropm" value="3^n">
+                                        &emsp;&emsp;&emsp;3<sup>n</sup>
+                                    </button>
+                                </li>
+                                <li>
+                                    <button class="dropdown-item dropm" value="n^3">
+                                        &emsp;&emsp;&emsp;n<sup>3</sup>
+                                    </button>
+                                </li>
+                                <li>
+                                    <button class="dropdown-item dropm" value="3root">
+                                        &emsp;&emsp;&emsp;<sup>3</sup><em>&#8730;</em><span> y</span>
+                                    </button>
+                                </li>
                             </ul>
                         </div>
+                        
                         <!--PI e Clear and back-->
                         <button type="button" class="btn" value="pi">&pi;</button>
                         <button type="button" class="btn" value="e">e</button>
                         <button type="button" class="btn" value="ce">C</button>
-                        <button type="button" class="btn" value="clear"><i class="fa-solid fa-delete-left"></i></button>
+                        <button type="button" class="btn" value="clear">
+                            <i class="fa-solid fa-delete-left"></i>
+                        </button>
                     </div>
                 </div>
                 <!--Other functions of calculator-->
                 <div class="row">
                     <div class="col col-bg">
-                        <button type="button" class="btn" value="square">x<sup>2</sup></button>
+                        <button type="button" class="btn" value="square">
+                            x<sup>2</sup>
+                        </button>
                         <button type="button" class="btn" value="1/x">1/x</button>
                         <button type="button" class="btn" value="|x|">|x|</button>
                         <button type="button" class="btn" value="exp">exp</button>
@@ -111,17 +154,22 @@
                 </div>
                 <div class="row">
                     <div class="col col-bg">
-                        <button type="button" class="btn" value="sqrt"><sup>2</sup><em>&#8730;</em><span>
-                                y</span></button>
+                        <button type="button" class="btn" value="sqrt">
+                            <sup>2</sup><em>&#8730;</em><span> y</span>
+                        </button>
                         <button type="button" class="btn" value="(">(</button>
                         <button type="button" class="btn" value=")">)</button>
                         <button type="button" class="btn" value="factorial">n!</button>
-                        <button type="button" class="btn" value="/"><i class="fa-solid fa-divide"></i></button>
+                        <button type="button" class="btn" value="/">
+                            <i class="fa-solid fa-divide"></i>
+                        </button>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col col-bg">
-                        <button type="button" class="btn" value="**">x<sup>y</sup></button>
+                        <button type="button" class="btn" value="**">
+                            x<sup>y</sup>
+                        </button>
                         <button type="button" class="btn bold" value="7">7</button>
                         <button type="button" class="btn bold" value="8">8</button>
                         <button type="button" class="btn bold" value="9">9</button>
@@ -130,7 +178,9 @@
                 </div>
                 <div class="row">
                     <div class="col col-bg">
-                        <button type="button" class="btn" value="10power">10<sup>x</sup></button>
+                        <button type="button" class="btn" value="10power">
+                            10<sup>x</sup>
+                        </button>
                         <button type="button" class="btn bold" value="4">4</button>
                         <button type="button" class="btn bold" value="5">5</button>
                         <button type="button" class="btn bold" value="6">6</button>
@@ -148,14 +198,16 @@
                 </div>
                 <div class="row">
                     <div class="col col-bg">
-                        <button type="button" class="btn " value="ln">ln</button>
-                        <button type="button" class="btn" value="+/-"><sup>+</sup>/<sub>-</sub></button>
+                        <button type="button" class="btn" value="ln">ln</button>
+                        <button type="button" class="btn" value="+/-">
+                            <sup>+</sup>/<sub>-</sub>
+                        </button>
                         <button type="button" class="btn bold" value="0">0</button>
                         <button type="button" class="btn" value=".">.</button>
                         <button type="button" class="btn blue" value="=">=</button>
                     </div>
                 </div>
-            </div> 
+            </div>
         </div>
     </div>
 
