--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="style.css" />
+    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous" />
+    <link rel="stylesheet" href="style.css" />
     <script src="https://kit.fontawesome.com/0c8946a054.js" crossorigin="anonymous"></script>
     <title>Calculator</title>
 </head>
@@ -30,7 +31,7 @@
                         <button type="button" class="btn" value="fe">F-E</button>
                     </div>
                 </div>
-                <!--Memory functions-->
+                <!--Memory functions(Buttons: MC: Memory Clear, MR: Memory Recall, M+:Memory Add, M-:Memory Subtract, MS:Memory Store)-->
                 <div class="row">
                     <div class="col">
                         <button type="button" class="btn" value="mc" id="mc" disabled>
@@ -44,7 +45,7 @@
                         <button type="button" class="btn" value="ms">MS</button>
                     </div>
                 </div>
-                <!--Trigonometry and log functions-->
+                <!--Trigonometry and log functions (Buttons: sin,cos and tan)-->
                 <div class="row">
                     <div class="col">
                         <div class="dropdown">
@@ -57,22 +58,22 @@
                             <ul class="dropdown-menu">
                                 <li>
                                     <button class="dropdown-item" value="sin">
-                                        &emsp;&emsp;&emsp;sin
+                                       sin
                                     </button>
                                 </li>
                                 <li>
                                     <button class="dropdown-item" value="cos">
-                                        &emsp;&emsp;&emsp;cos
+                                        cos
                                     </button>
                                 </li>
                                 <li>
                                     <button class="dropdown-item" value="tan">
-                                        &emsp;&emsp;&emsp;tan
+                                       tan
                                     </button>
                                 </li>
                             </ul>
                         </div>
-
+                        <!--Buttons: log2, random, log1p-->
                         <div class="dropdown">
                             <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown"
                                 aria-expanded="false">
@@ -81,17 +82,17 @@
                             <ul class="dropdown-menu">
                                 <li>
                                     <button class="dropdown-item" value="log2">
-                                        &emsp;&emsp;&emsp;log2
+                                       log2
                                     </button>
                                 </li>
                                 <li>
                                     <button class="dropdown-item" value="rnd">
-                                        &emsp;&emsp;&emsp;RND
+                                        RND
                                     </button>
                                 </li>
                                 <li>
                                     <button class="dropdown-item" value="log1p">
-                                        &emsp;&emsp;&emsp;log1p
+                                        log1p
                                     </button>
                                 </li>
                             </ul>
@@ -100,6 +101,7 @@
                 </div>
                 <div class="row">
                     <div class="col col-bg">
+                        <!--Buttons: (1) 2 power n (2) 3 power n (3) n cube (4) cube root-->
                         <div class="dropdown dropm2">
                             <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown"
                                 aria-expanded="false">
@@ -108,28 +110,28 @@
                             <ul class="dropdown-menu dropm">
                                 <li>
                                     <button class="dropdown-item dropm" value="2^n">
-                                        &emsp;&emsp;&emsp;2<sup>n</sup>
+                                        2<sup>n</sup>
                                     </button>
                                 </li>
                                 <li>
                                     <button class="dropdown-item dropm" value="3^n">
-                                        &emsp;&emsp;&emsp;3<sup>n</sup>
+                                        3<sup>n</sup>
                                     </button>
                                 </li>
                                 <li>
                                     <button class="dropdown-item dropm" value="n^3">
-                                        &emsp;&emsp;&emsp;n<sup>3</sup>
+                                        n<sup>3</sup>
                                     </button>
                                 </li>
                                 <li>
                                     <button class="dropdown-item dropm" value="3root">
-                                        &emsp;&emsp;&emsp;<sup>3</sup><em>&#8730;</em><span> y</span>
+                                        <sup>3</sup><em>&#8730;</em><span> y</span>
                                     </button>
                                 </li>
                             </ul>
                         </div>
 
-                        <!--PI e Clear and back-->
+                        <!--Buttons: PI, e, clear and backspace -->
                         <button type="button" class="btn" value="pi">&pi;</button>
                         <button type="button" class="btn" value="exp">e</button>
                         <button type="button" class="btn" value="ce">C</button>
