--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet" />
-    
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <script src="https://kit.fontawesome.com/0c8946a054.js" crossorigin="anonymous"></script>
     <title>Calculator</title>
 </head>
 
 <body>
     <div class="container">
-        <div class="container1">
+        <div class="container-input">
             <div class="row">
                 <div class="col-4">
                     <input type="text" id="input" disabled />
@@ -58,7 +58,7 @@
                             <ul class="dropdown-menu">
                                 <li>
                                     <button class="dropdown-item" value="sin">
-                                       sin
+                                        sin
                                     </button>
                                 </li>
                                 <li>
@@ -68,7 +68,7 @@
                                 </li>
                                 <li>
                                     <button class="dropdown-item" value="tan">
-                                       tan
+                                        tan
                                     </button>
                                 </li>
                             </ul>
@@ -82,7 +82,7 @@
                             <ul class="dropdown-menu">
                                 <li>
                                     <button class="dropdown-item" value="log2">
-                                       log2
+                                        log2
                                     </button>
                                 </li>
                                 <li>
@@ -167,7 +167,7 @@
                 </div>
                 <div class="row">
                     <div class="col col-bg">
-                        <button type="button" class="btn" value="**">
+                        <button type="button" class="btn" value="numpow">
                             x<sup>y</sup>
                         </button>
                         <button type="button" class="btn bold" value="7">7</button>
